Updated test scripts; updated readme.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "MODE=dev node src/index.js",
     "prod": "node src/index.js",
-    "test": "jest --watch",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "lint": "standard-focus"
   },
   "repository": {
